...
            }
        }
    }

    func collectionsSidebarView() -> some View {
        return VStack(alignment: .leading) {
            headerView(title: "Ditto Collections")
            if viewModel.isLoading {
                Spacer()
                AnyView(
                    ProgressView("Loading Collections...")
                        .progressViewStyle(.circular)
                )
...
